FilmCategories Controller, defaultPage

--- a/CinemaInfrastructure/appsettings.json
+++ b/CinemaInfrastructure/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= 4340s\\SQLEXPRESS; Database=cinema; Trusted_Connection=True; MultipleActiveResultSets=true"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
