--- a/CinemaInfrastructure/appsettings.json
+++ b/CinemaInfrastructure/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server= 4340s\\SQLEXPRESS; Database=cinema; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server= 4340s\\SQLEXPRESS; Database=cinema; Trusted_Connection=True; MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=4340s\\SQLEXPRESS;Database=cinema_identity;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
 
 
