--- a/CinemaInfrastructure/appsettings.json
+++ b/CinemaInfrastructure/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server= 4340s\\SQLEXPRESS; Database=cinema; Trusted_Connection=True; MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=4340s\\SQLEXPRESS;Database=cinema_identity;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=4340s\\SQLEXPRESS;Database=cinema;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
 
