--- a/CinemaInfrastructure/CinemaInfrastructure.csproj
+++ b/CinemaInfrastructure/CinemaInfrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0-rc" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
@@ -20,6 +21,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CinemaDomain\CinemaDomain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\posters\" />
   </ItemGroup>
 
 </Project>
